force-app/main/default/objects/Etapa_Onboarding__c/Etapa_Onboarding__c.object-meta.xml
<CustomObject>
    <label>Etapa de Onboarding</label>
    <nameField>
        <label>Nome da Etapa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Etapas de Onboarding</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>