force-app/main/default/objects/Etapa_Onboarding__c/fields/Concluida__c.field-meta.xml
<CustomField>
    <fullName>Concluida__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concluída</label>
    <type>Checkbox</type>
</CustomField>