force-app/main/default/objects/Etapa_Onboarding__c/fields/Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Onboarding__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Onboarding</label>
    <referenceTo>Onboarding__c</referenceTo>
    <relationshipLabel>Etapas de Onboarding</relationshipLabel>
    <relationshipName>Etapas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>